--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ dependencies = [
     "jupyterlab>=3.5.0",
     "jupytext>=1.14.1",
     "setuptools>=65.6.3",
+    "nbformat>=5.7.0",
+    "jupyterlab-code-formatter>=1.5.3",
+    "isort>=5.10.1",
+    "black>=22.10.0",
 ]
 requires-python = ">=3.11"
 license = {text = "MIT"}
