--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "black>=22.10.0",
     "tqdm>=4.64.1",
     "networkx>=2.8.8",
+    "matplotlib>=3.6.2",
+    "pyrsistent>=0.19.2",
 ]
 requires-python = ">=3.11"
 license = {text = "MIT"}
