--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "networkx>=2.8.8",
     "matplotlib>=3.6.2",
     "pyrsistent>=0.19.2",
+    "numpy>=1.23.5",
+    "pandas>=1.5.2",
 ]
-requires-python = ">=3.11"
+requires-python = ">=3.9"
 license = {text = "MIT"}
