--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "pyrsistent>=0.19.2",
     "numpy>=1.23.5",
     "pandas>=1.5.2",
+    "astar>=0.94",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
